--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,13 @@
   "description": "Backend that runs koji-react-oauth template",
   "main": "src/index.js",
   "scripts": {
-    "prestart": "koji-tools watch &",
+    "prestart": "koji-vcc watch &",
     "start": "hotel run 'json-server --watch db.json --port 3001 --host 0.0.0.0'",
     "dev": "NODE_ENV=development nodemon src/index.js",
     "test": "echo Test"
   },
-  "author": "kumar_abhirup",
-  "license": "MIT",
+  "author": "higoramp",
+  "license": "",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
@@ -19,7 +19,7 @@
     "hotel": "^0.8.7",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "koji-tools": "^0.5.1",
+    "@withkoji/vcc": "^1.1.3",
     "slugify": "^1.3.4",
     "stein-js-client": "0.0.2"
   },
