--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,17 +2,15 @@
   "name": "koji-react-oauth-scaffold",
   "version": "1.0.0",
   "description": "React OAuth App template for Koji makers to start with!",
-  "author": "kumar_abhirup",
+  "author": "higoramp",
   "scripts": {
     "build": "NODE_ENV=production webpack --config ./.internals/webpack.production.js --color -p --progress --hide-modules --display-optimization-bailout",
-    "postbuild": "koji-tools pwa",
-    "prestart": "koji-tools watch &",
+    "prestart": "koji-vcc watch &",
     "start": "webpack-dev-server --config ./.internals/webpack.development.js --inline --hot"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
-    "koji-tools": "^0.5.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-facebook-auth": "^1.4.0",
@@ -35,6 +33,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.1",
+    "@withkoji/vcc": "^1.1.3",
     "exports-loader": "^0.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
