--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
     "hotel": "^0.8.7",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "koji-tools": "^0.5.1",
+    "@withkoji/vcc": "^1.1.3",
     "slugify": "^1.3.4",
     "stein-js-client": "0.0.2"
   },
