--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.1",
+    "@withkoji/vcc": "^1.1.3",
     "exports-loader": "^0.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
