--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,8 @@
   "description": "Backend that runs koji-react-oauth template",
   "main": "src/index.js",
   "scripts": {
-    "prestart": "koji-vcc watch &",
-    "start": "hotel run 'json-server --watch db.json --port 3001 --host 0.0.0.0'",
-    "dev": "NODE_ENV=development nodemon src/index.js",
+    "start": "NODE_ENV=production hotel run 'json-server --watch db.json --port 3001 --host 0.0.0.0'",
+    "dev": "hotel run 'json-server --watch db.json --port 3001 --host 0.0.0.0'",
     "test": "echo Test"
   },
   "author": "higoramp",
@@ -19,11 +18,10 @@
     "hotel": "^0.8.7",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "@withkoji/vcc": "^1.1.3",
     "slugify": "^1.3.4",
     "stein-js-client": "0.0.2"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    
   }
 }
