--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prestart": "koji-vcc watch &",
     "start": "hotel run 'json-server --watch db.json --port 3001 --host 0.0.0.0'",
-    "dev": "NODE_ENV=development nodemon src/index.js",
+    "dev": "hotel run 'json-server --watch db.json --port 3001 --host 0.0.0.0'",
     "test": "echo Test"
   },
   "author": "higoramp",
