--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,10 @@
     "express": "^4.17.1",
     "hotel": "^0.8.7",
     "isomorphic-fetch": "^2.2.1",
+    "json-server": "^0.15.1",
     "jsonwebtoken": "^8.5.1",
     "slugify": "^1.3.4",
     "stein-js-client": "0.0.2"
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
