--- a/backend/package.json
+++ b/backend/package.json
@@ -2,25 +2,15 @@
   "name": "koji-react-oauth-backend",
   "version": "1.0.0",
   "description": "Backend that runs koji-react-oauth template",
-  "main": "src/index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=production hotel run 'json-server --watch db.json --port 3001 --host 0.0.0.0'",
-    "dev": "hotel run 'json-server --watch db.json --port 3001 --host 0.0.0.0'",
-    "test": "echo Test"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "higoramp",
   "license": "",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "hotel": "^0.8.7",
-    "isomorphic-fetch": "^2.2.1",
-    "json-server": "^0.15.1",
-    "jsonwebtoken": "^8.5.1",
-    "slugify": "^1.3.4",
-    "stein-js-client": "0.0.2"
+    "json-server": "^0.15.1"
   },
   "devDependencies": {}
 }
