--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --config ./.internals/webpack.production.js --color -p --progress --hide-modules --display-optimization-bailout",
     "prestart": "koji-vcc watch &",
-    "start": "webpack-dev-server --config ./.internals/webpack.development.js --inline --hot"
+    "start": "webpack-dev-server --config ./.internals/webpack.development.js --inline --hot",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-jest": "^25.1.0",
     "babel-polyfill": "^6.26.0",
+    "jest": "^25.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-facebook-auth": "^1.4.0",
     "react-google-login": "^5.0.4",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.0.0",
+    "react-test-renderer": "^16.12.0",
     "styled-components": "^4.2.0",
     "universal-cookie": "^4.0.2",
     "whatwg-fetch": "^3.0.0"
@@ -24,8 +28,9 @@
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
+    "@withkoji/vcc": "^1.1.3",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -33,7 +38,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^2.1.1",
-    "@withkoji/vcc": "^1.1.3",
     "exports-loader": "^0.7.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
